added function to end the game at 5 wins, and then provide a button to reset the scores

--- a/style.css
+++ b/style.css
@@ -18,9 +18,13 @@
 .btn-select {
   text-align: center;
   width: 75%;
-  height: 200px;
+  height: 100px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.reset-button {
+  text-align: center;
 }
 
 .results {
