--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+body {
+  background-color: 'black';
+  color: 'red';
+}
+
 .container {
   width: 100%;
   height: 100%;
+}
+
+.main-header {
+  text-align: center;
+
 }
 
 #scoreboard {
@@ -18,7 +28,7 @@
 .btn-select {
   text-align: center;
   width: 75%;
-  height: 100px;
+  height: 50px;
   margin-left: auto;
   margin-right: auto;
 }
